[gd_scene load_steps=23 format=2]

[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/big_demon_run_anim_f2.png" type="Texture" id=1]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/big_demon_run_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/big_demon_idle_anim_f3.png" type="Texture" id=3]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/big_demon_idle_anim_f0.png" type="Texture" id=4]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/big_demon_idle_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/big_demon_idle_anim_f2.png" type="Texture" id=6]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/big_demon_run_anim_f0.png" type="Texture" id=7]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/big_demon_run_anim_f3.png" type="Texture" id=8]
[ext_resource path="res://scenes/MOBS/Demon/enemy.gd" type="Script" id=9]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/exclamation.png.png" type="Texture" id=10]
[ext_resource path="res://sound effects/notices.mp3" type="AudioStream" id=11]
[ext_resource path="res://sound effects/hit_enemy.mp3" type="AudioStream" id=12]

[sub_resource type="AnimatedTexture" id=1]
frames = 4
fps = 10.0
frame_0/texture = ExtResource( 7 )
frame_1/texture = ExtResource( 2 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 1 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 8 )
frame_3/delay_sec = 0.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 9.67207

[sub_resource type="CircleShape2D" id=4]
radius = 88.0032

[sub_resource type="Animation" id=5]
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -18.125 ), Vector2( -25, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.439216, 0, 0, 1 ), Color( 0.439216, 0, 0, 1 ), Color( 0.439216, 0, 0, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "destroy_node"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("health_bar:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.0152513, 0.872372 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimatedSprite:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("exclamation mark:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 0.859674, 0.923188, 0.991183, 1.0643 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("exclamation mark:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("exclamation mark:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ), Vector2( 0, -40 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 13.9706 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.141176, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )

[node name="demon" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 9 )
speed = 70

[node name="Sprite" type="Sprite" parent="."]
visible = false
light_mask = 3
position = Vector2( 0, -16.6489 )
texture = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 3
position = Vector2( 0, -18.125 )
frames = SubResource( 2 )
animation = "dead"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
pause_mode = 1
position = Vector2( 0, -8.89032 )
shape = SubResource( 3 )
disabled = true

[node name="search_player" type="Timer" parent="."]
wait_time = 3.0

[node name="area de vision" type="Area2D" parent="."]
show_behind_parent = true
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="area de vision"]
position = Vector2( 0, -8.75 )
shape = SubResource( 4 )

[node name="exclamation mark" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -30 )
scale = Vector2( 0.39416, 0.39416 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damaged = SubResource( 5 )
anims/dying = SubResource( 6 )
anims/exclamation = SubResource( 7 )

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( 0, 0.707909 )
scale = Vector2( 0.793539, 0.88 )
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, -16 )
shape = SubResource( 8 )

[node name="health_bar" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.901124 )

[node name="ProgressBar" type="ProgressBar" parent="health_bar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.30685
margin_top = -36.5448
margin_right = 92.6932
margin_bottom = -22.5448
rect_scale = Vector2( 0.159999, 0.159999 )
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, -10.1136 )
process_parent = true
physics_process_parent = true

[node name="notices" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="damaged" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[connection signal="body_entered" from="area de vision" to="." method="_on_area_de_vision_body_entered"]
[connection signal="body_exited" from="area de vision" to="." method="_on_area_de_vision_body_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="viewport_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_viewport_exited"]
